codecov and travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 
   global:
 
-
+  CODECOV_TOKEN="3b28a22f-1c7d-4de1-a146-66c2220d0fc8"
 
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонний сервис https://codecov.io/
